--- a/TourGuideApp/TourGuideApp/LoginPage.xaml
+++ b/TourGuideApp/TourGuideApp/LoginPage.xaml
@@ -1,14 +1,59 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:TourGuideApp.Converters"
              xmlns:local="clr-namespace:TourGuideApp"
              x:Class="TourGuideApp.LoginPage">
 
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <converters:InvertBooleanConverter x:Key="invertBooleanConverter" />
+
+            <Style TargetType="Label" x:Key="errorDescriptionStyle">
+                <Setter Property="TextColor" Value="Red" />
+                <Setter Property="FontSize" Value="Small" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    <StackLayout
+        Orientation="Vertical"
+        Padding="25"
+        VerticalOptions="Center">
+        <Label
+            Style="{StaticResource errorDescriptionStyle}"
+            Text="User does not exist, please sign up."
+            IsVisible="{Binding UserExists, Converter={StaticResource invertBooleanConverter}}" />
+        <Label
+            Style="{StaticResource errorDescriptionStyle}"
+            Text="{Binding Email.ValidationDescriptions}"
+            IsVisible="{Binding Email.IsValid, Converter={StaticResource invertBooleanConverter}}" />
+        <Entry
+            Placeholder="Email"
+            Text="{Binding Email.Value}">
+            <Entry.Triggers>
+                <DataTrigger 
+                    TargetType="Entry"
+                    Binding="{Binding Email.IsValid}"
+                    Value="False">
+                    <Setter Property="TextColor" Value="Red" />
+                </DataTrigger>
+            </Entry.Triggers>
+        </Entry>
+        <Label
+            Style="{StaticResource errorDescriptionStyle}"
+            Text="{Binding Password.ValidationDescriptions}"
+            IsVisible="{Binding Password.IsValid, Converter={StaticResource invertBooleanConverter}}" />
+        <Entry
+            IsPassword="true"
+            Placeholder="Password"
+            Text="{Binding Password.Value}" />
+        <Button
+            Text="Login"
+            Command="{Binding LoginCmd}" />
+        <ActivityIndicator
+            IsVisible="{Binding IsBusy}"
+            IsRunning="{Binding IsBusy}" />
     </StackLayout>
 
 </ContentPage>
